cargo-features = ["edition2024"]

[package]
name = "ambient-auction-interface"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "=0.9.2"
ambient-auction-api = { git = "https://github.com/ambient-xyz/auction-api", rev = "82a615cc0c67cb330adabe7cd761a3bebd00cdf7" }
five8_const = "1.0.0"

[features]
global-config = ["ambient-auction-api/global-config"]
default = []
