cargo-features = ["edition2024"]

[package]
name = "ambient-auction-interface"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "=0.9.2"
ambient-auction-api = { git = "https://github.com/ambient-xyz/auction-api", rev = "87c6f00be98c4ff1e4c38bbbf4ef7d851d23ba73" }
five8_const = "1.0.0"

[features]
global-config = ["ambient-auction-api/global-config"]
default = []
